// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> debe de mostrar items cuando se cargan las imagenes useFetchGifs  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Spider man
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id={125}
      key="125"
      title="ABC"
      url="https://www.gayo.com/imagem.png"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid /> debe de renderizar correctamente cuando se carga por primera vez  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Spider man
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading . . .
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
